--- a/style.css
+++ b/style.css
@@ -170,6 +170,16 @@ body {
   text-align: center;
   color: #FFFFFF;
 }
+.sort_btn {
+  background-color: transparent;
+  width: 102px;
+  height: 35px;
+  left: 198px;
+  top: 1203px;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+  color: #FFFFFF;
+}
 .card_title {
   font-family: Montserrat;
   font-style: normal;
@@ -178,6 +188,16 @@ body {
   line-height: 27px;
 }
 .paintings_card {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 5px;
+}
+.top_cards {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 5px;
+}
+.bottom_cards {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 5px;
